--- a/src/index.css
+++ b/src/index.css
@@ -17,33 +17,10 @@
   text-shadow: -1px 0 0 rgba(var(--color-flamingo) / 0.2);
 }
 
-/* .w3ch { width: 3ch; } */
-
-.loader > div {
-  display: inline-block;
-  margin: 0.125em;
-  width: 1em;
-  height: 1em;
-  border-radius: 100%;
-  background-color: black;
-
-  animation: ball-pulse-sync 0.8s ease-in-out alternate infinite;
-  /* animation-delay: 0.32s; */
+.animate-delay-200 {
+  animation-delay: 200ms;
 }
 
-.loader > div:nth-child(1) {
-  animation-delay: 0s;
-}
-
-.loader > div:nth-child(2) {
-  animation-delay: 0.3s;
-}
-
-.loader > div:nth-child(3) {
-  animation-delay: 0.6s;
-}
-
-@keyframes ball-pulse-sync {
-  0% { transform:translateY(8px); }
-  100% { transform:translateY(-8px); }
+.animate-delay-400 {
+  animation-delay: 400ms;
 }
